--- a/style.css
+++ b/style.css
@@ -1,67 +1,69 @@
 :root {
     --dark-blue: #363f5f;
-    --green: #49AA26;
-    --light-green: #3dd705;
-    --red: #e92929;
-
 }
 
-
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    background:rgb(240, 239, 239);
-    font-family: 'Poppins', sans-serif;
+body {
+    background: #f0f2f5;
+    font-family:'Poppins', sans-serif
 }
 
-.container{
+.container {
     width: min(90vw, 800px);
-    margin:auto;
+    margin: auto;
 }
 
-h2{
-    margin-top:3.2rem;
+/* Titles ===================== */
+h2 {
+    margin-top: 3.2rem;
     margin-bottom: 0.8rem;
-    color:#6db1ff;
-    font-weight: normal;
+    color: var(--dark-blue);
 
+    font-weight: normal;
 }
 
-header{
+
+/* Header ===================== */
+header {
     background: #6db1ff;
-    padding:2rem 0 10rem;
+    padding: 2rem 0 10rem;
     text-align: center;
 }
 
-#logo{
-    color:#fff;
+#logo {
+    color: #fff;
     font-weight: 100;
 }
 
-#balance{
+/* Balance ===================== */
+#balance {
     margin-top: -8rem;
 }
-#balance h2{
-    color:#fff;
+
+#balance h2 {
+    color:white;
     margin-top:0;
 }
-.card{
-    background:#fff;
-    padding:1.5rem 2rem;
+
+/* Cards ===================== */
+.card {
+    background: white;
+    padding: 1.5rem 2rem;
     border-radius: 0.25rem;
+
     margin-bottom: 2rem;
+
+    color: var(--dark-blue);
 }
+
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .card p {
@@ -72,21 +74,61 @@ header{
 }
 
 .card.total {
-    background:#76b5fc;
+    background: #76b5fc;
     color: white;
 }
 
-#transaction {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-}
+/* Table ===================== */
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969cb3;
 }
 
-footer{
-    text-align: center;
+table thead tr th:first-child, 
+table tbody tr td:first-child{
+    border-radius: 0.25rem 0 0 0.25rem;
 }
+
+table thead th {
+    background: white;
+
+    font-weight: normal;
+    padding: 1rem 2rem;
+
+    text-align: left;
+}
+
+table tbody tr {
+    opacity: 0.7
+}
+
+table tbody tr:hover {
+    opacity: 1
+}
+
+table tbody td {
+    background:white;
+    padding: 1rem 2rem;
+}
+
+td.description {
+    color: var(--dark-blue);
+}
+
+td.income {
+    color: #12a454;
+}
+
+td.expense {
+    color: #e92929;
+}
+
+/* Footer ===================== */
+footer {
+    text-align: center;
+    padding: 4rem 0 2rem;
+    color: var(--dark-blue);
+
+    opacity: 0.6;
+} 
